--- a/SimpleGameEngine/SimpleGameEngine.vcxproj.filters
+++ b/SimpleGameEngine/SimpleGameEngine.vcxproj.filters
@@ -207,6 +207,9 @@
     <ClInclude Include="src\SimpleGameEngine\OpenGL\WaterRefractionFbo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\SimpleGameEngine\OpenGL\FrameBufferObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\SimpleGameEngine\Application.cpp">
@@ -387,6 +390,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\SimpleGameEngine\OpenGL\WaterRefractionFbo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SimpleGameEngine\OpenGL\FrameBufferObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
