--- a/SimpleGameEngine/SimpleGameEngine.vcxproj
+++ b/SimpleGameEngine/SimpleGameEngine.vcxproj
@@ -11,6 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\SimpleGameEngine\Events\Event.h" />
+    <ClInclude Include="src\SimpleGameEngine\Events\WindowEvent.h" />
     <ClInclude Include="src\SimpleGameEngine\OpenGL\FrameBufferObject.h" />
     <ClInclude Include="src\SimpleGameEngine\Loaders\FboLoader.h" />
     <ClInclude Include="src\SimpleGameEngine\Shaders\GuiShaderConstants.h" />
@@ -78,6 +80,8 @@
     <ClInclude Include="src\SimpleGameEngine\OpenGL\WaterRefractionFbo.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\SimpleGameEngine\Events\Event.cpp" />
+    <ClCompile Include="src\SimpleGameEngine\Events\WindowEvent.cpp" />
     <ClCompile Include="src\SimpleGameEngine\OpenGL\FrameBufferObject.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Loaders\FboLoader.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Shaders\GuiShaderConstants.cpp" />
