--- a/SimpleGameEngine/SimpleGameEngine.vcxproj
+++ b/SimpleGameEngine/SimpleGameEngine.vcxproj
@@ -11,6 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\SimpleGameEngine\Renderers\EntityShadowRenderer.h" />
+    <ClInclude Include="src\SimpleGameEngine\Shaders\ShadowShaderConstants.h" />
     <ClInclude Include="src\SimpleGameEngine\Projection\OrthoProjectionBox.h" />
     <ClInclude Include="src\SimpleGameEngine\OpenGL\ShadowMapFbo.h" />
     <ClInclude Include="src\SimpleGameEngine\Loaders\FboLoadException.h" />
@@ -84,6 +86,8 @@
     <ClInclude Include="src\SimpleGameEngine\Models\WaterProperties.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\SimpleGameEngine\Renderers\EntityShadowRenderer.cpp" />
+    <ClCompile Include="src\SimpleGameEngine\Shaders\ShadowShaderConstants.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Projection\OrthoProjectionBox.cpp" />
     <ClCompile Include="src\SimpleGameEngine\OpenGL\ShadowMapFbo.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Loaders\FboLoadException.cpp" />
@@ -164,6 +168,8 @@
     <None Include="src\SimpleGameEngine\Shaders\entityVertex.vert" />
     <None Include="src\SimpleGameEngine\Shaders\guiFragment.frag" />
     <None Include="src\SimpleGameEngine\Shaders\guiVertex.vert" />
+    <None Include="src\SimpleGameEngine\Shaders\shadowFragment.frag" />
+    <None Include="src\SimpleGameEngine\Shaders\shadowVertex.vert" />
     <None Include="src\SimpleGameEngine\Shaders\skyboxFragment.frag" />
     <None Include="src\SimpleGameEngine\Shaders\skyboxVertex.vert" />
     <None Include="src\SimpleGameEngine\Shaders\terrainFragment.frag" />
